proc-model-compiler/src/main/java/procmodel/compiler/generated/ProcModelParser.java
// Generated from java-escape by ANTLR 4.11.1
package procmodel.compiler.generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ProcModelParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, PLUS=22, MINUS=23, TIMES=24, DIVIDE=25, 
		NORMAL_TYPE=26, PARAMETER_TYPE=27, IDENTIFIER=28, FLOAT_LITERAL=29, STRING_LITERAL=30, 
		INT_LITERAL=31, WS=32;
	public static final int
		RULE_start = 0, RULE_outerStatement = 1, RULE_innerStatement = 2, RULE_relativeImportPrefix = 3, 
		RULE_relativeImportPath = 4, RULE_importPath = 5, RULE_importModel = 6, 
		RULE_importTriangles = 7, RULE_importAlias = 8, RULE_importValue = 9, 
		RULE_dynamicBlock = 10, RULE_childModelBlock = 11, RULE_dynamicDeclarationBlock = 12, 
		RULE_childModel = 13, RULE_parameterDeclaration = 14, RULE_dynamicDeclaration = 15, 
		RULE_variableDeclaration = 16, RULE_variableReassignment = 17, RULE_variableReassignmentTarget = 18, 
		RULE_functionDeclaration = 19, RULE_functionInvocation = 20, RULE_readIndexed = 21, 
		RULE_writeIndexed = 22, RULE_expression = 23, RULE_variableProperty = 24, 
		RULE_positionConstructor = 25, RULE_listElement = 26, RULE_listDeclaration = 27, 
		RULE_setDeclaration = 28, RULE_forLoop = 29, RULE_forLoopHeader = 30, 
		RULE_forLoopVariable = 31, RULE_forLoopComparator1 = 32, RULE_forLoopComparator2 = 33, 
		RULE_forLoopComparator = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "outerStatement", "innerStatement", "relativeImportPrefix", 
			"relativeImportPath", "importPath", "importModel", "importTriangles", 
			"importAlias", "importValue", "dynamicBlock", "childModelBlock", "dynamicDeclarationBlock", 
			"childModel", "parameterDeclaration", "dynamicDeclaration", "variableDeclaration", 
			"variableReassignment", "variableReassignmentTarget", "functionDeclaration", 
			"functionInvocation", "readIndexed", "writeIndexed", "expression", "variableProperty", 
			"positionConstructor", "listElement", "listDeclaration", "setDeclaration", 
			"forLoop", "forLoopHeader", "forLoopVariable", "forLoopComparator1", 
			"forLoopComparator2", "forLoopComparator"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'./'", "'import'", "'model'", "'as'", "'value'", "'{'", 
			"'}'", "'child'", "'('", "','", "')'", "'parameter'", "'<'", "'>'", "'='", 
			"'.'", "'['", "']'", "'for'", "'<='", "'+'", "'-'", "'*'", "'/'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "PLUS", "MINUS", 
			"TIMES", "DIVIDE", "NORMAL_TYPE", "PARAMETER_TYPE", "IDENTIFIER", "FLOAT_LITERAL", 
			"STRING_LITERAL", "INT_LITERAL", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ProcModelParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ProcModelParser.EOF, 0); }
		public List<OuterStatementContext> outerStatement() {
			return getRuleContexts(OuterStatementContext.class);
		}
		public OuterStatementContext outerStatement(int i) {
			return getRuleContext(OuterStatementContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProcModelListener ) ((ProcModelListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProcModelListener ) ((ProcModelListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProcModelVisitor ) return ((ProcModelVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 4162061960L) != 0) {
				{
				{
				setState(70);
				outerStatement();
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(76);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OuterStatementContext extends ParserRuleContext {
		public ParameterDeclarationContext parameterDeclaration() {
			return getRuleContext(ParameterDeclarationContext.class,0);
		}
		public ImportModelContext importModel() {
			return getRuleContext(ImportModelContext.class,0);
		}
		public ImportValueContext importValue() {
			return getRuleContext(ImportValueContext.class,0);
		}
		public ImportTrianglesContext importTriangles() {
			return getRuleContext(ImportTrianglesContext.class,0);
		}
		public InnerStatementContext innerStatement() {
			return getRuleContext(InnerStatementContext.class,0);
		}
		public OuterStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_outerStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProcModelListener ) ((ProcModelListener)listener).enterOuterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProcModelListener ) ((ProcModelListener)listener).exitOuterStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProcModelVisitor ) return ((ProcModelVisitor<? extends T>)visitor).visitOuterStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OuterStatementContext outerStatement() throws RecognitionException {
		OuterStatementContext _localctx = new OuterStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_outerStatement);
		try {
			setState(83);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				parameterDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				importModel();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(80);
				importValue();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(81);
				importTriangles();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(82);
				innerStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InnerStatementContext extends ParserRuleContext {
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public VariableReassignmentContext variableReassignment() {
			return getRuleContext(VariableReassignmentContext.class,0);
		}
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public ChildModelContext childModel() {
			return getRuleContext(ChildModelContext.class,0);
		}
		public FunctionInvocationContext functionInvocation() {
			return getRuleContext(FunctionInvocationContext.class,0);
		}
		public WriteIndexedContext writeIndexed() {
			return getRuleContext(WriteIndexedContext.class,0);
		}
		public ForLoopContext forLoop() {
			return getRuleContext(ForLoopContext.class,0);
		}
		public InnerStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_innerStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProcModelListener ) ((ProcModelListener)listener).enterInnerStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProcModelListener ) ((ProcModelListener)listener).exitInnerStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProcModelVisitor ) return ((ProcModelVisitor<? extends T>)visitor).visitInnerStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InnerStatementContext innerStatement() throws RecognitionException {
		InnerStatementContext _localctx = new InnerStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_innerStatement);
		try {
			setState(94);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(85);
				variableDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(86);
				variableReassignment();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(87);
				functionDeclaration();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(88);
				childModel();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(89);
				functionInvocation();
				setState(90);
				match(T__0);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(92);
				writeIndexed();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(93);
				forLoop();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RelativeImportPrefixContext extends ParserRuleContext {
		public RelativeImportPrefixContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relativeImportPrefix; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProcModelListener ) ((ProcModelListener)listener).enterRelativeImportPrefix(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProcModelListener ) ((ProcModelListener)listener).exitRelativeImportPrefix(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProcModelVisitor ) return ((ProcModelVisitor<? extends T>)visitor).visitRelativeImportPrefix(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RelativeImportPrefixContext relativeImportPrefix() throws RecognitionException {
		RelativeImportPrefixContext _localctx = new RelativeImportPrefixContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_relativeImportPrefix);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RelativeImportPathContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(ProcModelParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ProcModelParser.IDENTIFIER, i);
		}
		public List<TerminalNode> DIVIDE() { return getTokens(ProcModelParser.DIVIDE); }
		public TerminalNode DIVIDE(int i) {
			return getToken(ProcModelParser.DIVIDE, i);
		}
		public RelativeImportPathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relativeImportPath; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProcModelListener ) ((ProcModelListener)listener).enterRelativeImportPath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProcModelListener ) ((ProcModelListener)listener).exitRelativeImportPath(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProcModelVisitor ) return ((ProcModelVisitor<? extends T>)visitor).visitRelativeImportPath(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RelativeImportPathContext relativeImportPath() throws RecognitionException {
		RelativeImportPathContext _localctx = new RelativeImportPathContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_relativeImportPath);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(98);
					match(IDENTIFIER);
					setState(99);
					match(DIVIDE);
					}
					} 
				}
				setState(104);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(105);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportPathContext extends ParserRuleContext {
		public RelativeImportPathContext relativeImportPath() {
			return getRuleContext(RelativeImportPathContext.class,0);
		}
		public RelativeImportPrefixContext relativeImportPrefix() {
			return getRuleContext(RelativeImportPrefixContext.class,0);
		}
		public ImportPathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importPath; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProcModelListener ) ((ProcModelListener)listener).enterImportPath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProcModelListener ) ((ProcModelListener)listener).exitImportPath(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProcModelVisitor ) return ((ProcModelVisitor<? extends T>)visitor).visitImportPath(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportPathContext importPath() throws RecognitionException {
		ImportPathContext _localctx = new ImportPathContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_importPath);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(107);
				relativeImportPrefix();
				}
			}

			setState(110);
			relativeImportPath();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportModelContext extends ParserRuleContext {
		public ImportPathContext importPath() {
			return getRuleContext(ImportPathContext.class,0);
		}
		public ImportAliasContext importAlias() {
			return getRuleContext(ImportAliasContext.class,0);
		}
		public ImportModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importModel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProcModelListener ) ((ProcModelListener)listener).enterImportModel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProcModelListener ) ((ProcModelListener)listener).exitImportModel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProcModelVisitor ) return ((ProcModelVisitor<? extends T>)visitor).visitImportModel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportModelContext importModel() throws RecognitionException {
		ImportModelContext _localctx = new ImportModelContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_importModel);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(T__2);
			setState(113);
			match(T__3);
			setState(114);
			importPath();
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(115);
				importAlias();
				}
			}

			setState(118);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportTrianglesContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ProcModelParser.IDENTIFIER, 0); }
		public ImportPathContext importPath() {
			return getRuleContext(ImportPathContext.class,0);
		}
		public ImportAliasContext importAlias() {
			return getRuleContext(ImportAliasContext.class,0);
		}
		public ImportTrianglesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importTriangles; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProcModelListener ) ((ProcModelListener)listener).enterImportTriangles(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProcModelListener ) ((ProcModelListener)listener).exitImportTriangles(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProcModelVisitor ) return ((ProcModelVisitor<? extends T>)visitor).visitImportTriangles(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportTrianglesContext importTriangles() throws RecognitionException {
		ImportTrianglesContext _localctx = new ImportTrianglesContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_importTriangles);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(T__2);
			setState(121);
			match(IDENTIFIER);
			setState(122);
			importPath();
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(123);
				importAlias();
				}
			}

			setState(126);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportAliasContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ProcModelParser.IDENTIFIER, 0); }
		public ImportAliasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importAlias; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProcModelListener ) ((ProcModelListener)listener).enterImportAlias(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProcModelListener ) ((ProcModelListener)listener).exitImportAlias(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProcModelVisitor ) return ((ProcModelVisitor<? extends T>)visitor).visitImportAlias(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportAliasContext importAlias() throws RecognitionException {
		ImportAliasContext _localctx = new ImportAliasContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_importAlias);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(T__4);
			setState(129);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportValueContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ProcModelParser.IDENTIFIER, 0); }
		public ImportPathContext importPath() {
			return getRuleContext(ImportPathContext.class,0);
		}
		public ImportAliasContext importAlias() {
			return getRuleContext(ImportAliasContext.class,0);
		}
		public ImportValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProcModelListener ) ((ProcModelListener)listener).enterImportValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProcModelListener ) ((ProcModelListener)listener).exitImportValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProcModelVisitor ) return ((ProcModelVisitor<? extends T>)visitor).visitImportValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportValueContext importValue() throws RecognitionException {
		ImportValueContext _localctx = new ImportValueContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_importValue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(T__2);
			setState(132);
			match(IDENTIFIER);
			setState(133);
			match(T__5);
			setState(134);
			importPath();
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(135);
				importAlias();
				}
			}

			setState(138);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DynamicBlockContext extends ParserRuleContext {
		public List<InnerStatementContext> innerStatement() {
			return getRuleContexts(InnerStatementContext.class);
		}
		public InnerStatementContext innerStatement(int i) {
			return getRuleContext(InnerStatementContext.class,i);
		}
		public DynamicBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dynamicBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProcModelListener ) ((ProcModelListener)listener).enterDynamicBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProcModelListener ) ((ProcModelListener)listener).exitDynamicBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProcModelVisitor ) return ((ProcModelVisitor<? extends T>)visitor).visitDynamicBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DynamicBlockContext dynamicBlock() throws RecognitionException {
		DynamicBlockContext _localctx = new DynamicBlockContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_dynamicBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(T__6);
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 4162061952L) != 0) {
				{
				{
				setState(141);
				innerStatement();
				}
				}
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(147);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ChildModelBlockContext extends ParserRuleContext {
		public DynamicBlockContext dynamicBlock() {
			return getRuleContext(DynamicBlockContext.class,0);
		}
		public ChildModelBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_childModelBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProcModelListener ) ((ProcModelListener)listener).enterChildModelBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProcModelListener ) ((ProcModelListener)listener).exitChildModelBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProcModelVisitor ) return ((ProcModelVisitor<? extends T>)visitor).visitChildModelBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ChildModelBlockContext childModelBlock() throws RecognitionException {
		ChildModelBlockContext _localctx = new ChildModelBlockContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_childModelBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			dynamicBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DynamicDeclarationBlockContext extends ParserRuleContext {
		public DynamicBlockContext dynamicBlock() {
			return getRuleContext(DynamicBlockContext.class,0);
		}
		public DynamicDeclarationBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dynamicDeclarationBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProcModelListener ) ((ProcModelListener)listener).enterDynamicDeclarationBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProcModelListener ) ((ProcModelListener)listener).exitDynamicDeclarationBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProcModelVisitor ) return ((ProcModelVisitor<? extends T>)visitor).visitDynamicDeclarationBlock(this);
			else return visitor.visitChildren(this);
		}
	}
